completed text for errors to pop up in a list

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -118,6 +118,11 @@ button[disabled] {
   overflow: hidden;
 }
 
+.errormessages{
+  color: red;
+  text-align: left;
+}
+
 @media (max-width: 690px) {
   .btn {
     font-size: 1rem;
